@@ -63,4 +63,15 @@ function filtroAcessoPaciente() {
         header('location: /vittaclinic2/index.php');
     }
 }
+//Pegar a data de hoje no formatO YYYY-MM-DD
+function dataHoje() {
+    $hoje = getdate();
+    $hoje_ano = strval($hoje['year']);
+    $hoje_mes = strval($hoje['mon']);
+    $hoje_dia = strval($hoje['mday']);
+    if ($hoje_mes != 10 OR 11 OR 12) {
+        $hoje_mes = '0'.$hoje_mes;
+    }
+    $hoje_data = $hoje_ano . '-' . $hoje_mes . '-' . $hoje_dia;
+}
 ?>
