@@ -12,3 +12,4 @@
 24/03/19 - Médicos agora recebem tabelas no cadastro.
 24/03/20 - É possivel selecionar médicos na pagina de marcar consultas.
 24/03/21 - Pequenas correções. Inicio do sistema de escolher data.
+24/03/24 - Tem o sistema de escolher a data mas ele ainda precisa guardar a data para poder escolher o horario.
